--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,11 @@
         "php": ">=7.4",
         "composer/installers": "~1.0"
     },
+    "autoload": {
+        "psr-4": {
+            "mundophpbb\\workspace\\": "src/"
+        }
+    },
     "extra": {
         "display-name": "Mundo phpBB Workspace",
         "soft-require": {
